# shmageOS

./: Cargo.toml  Makefile  README.md  make_boot_usb.sh  make_uefi_compatible.sh  start_vm.sh  test_uefi.sh
.cargo/: config.toml
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/arch/x86_64/: boot.asm  grub.cfg  long_mode_start.asm  multiboot_header.asm
tests/: basic_boot.rs  panic.rs  stack_overflow.rs
