[package]
name = "shos"
version = "0.1.0"
authors = ["Shawn Schulz <shawnschulz@gmail.com>"]
edition = "2024"

[dependencies]
bootloader = "0.9"
bootloader_api = "0.11.11"
volatile = "0.2.6"
spin = "0.5.2"
uart_16550 = "0.2.0"
x86_64 = "0.14.0"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
test-timeout = 300          # (in seconds, turn this lower if needed to debug infinite loops)

[[test]]
name = "stack_overflow"
harness = false
